fix scrollbar styles

--- a/src/components/animeRecommendations/animeRecommendations.scss
+++ b/src/components/animeRecommendations/animeRecommendations.scss
@@ -27,9 +27,5 @@
     &::-webkit-scrollbar-track {
       background-color: transparent;
     }
-    & {
-      scrollbar-width: 5px; 
-      scrollbar-color: $secondary-text-color transparent; 
-    }
   }
 }
