--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -50,9 +50,10 @@ input::-webkit-inner-spin-button {
 
 body {
     background-color: $background-color;
+    overflow: auto;
     &::-webkit-scrollbar {
         width: 10px;
-      }
+    }
     &::-webkit-scrollbar-thumb {
         background-color: $secondary-text-color;
         border-radius: 15px;
@@ -60,8 +61,5 @@ body {
     &::-webkit-scrollbar-track {
         background-color: transparent;
     }
-    & {
-        scrollbar-width: 5px; 
-        scrollbar-color: $secondary-text-color transparent; 
-    }
 }
+
